@@ -32,19 +32,10 @@
 
 /* $Id$ */
 
-/* library function return value declarations */
-
 #ifndef CSCOPE_LIBRARY_H
 #define CSCOPE_LIBRARY_H
 
-#if BSD
-#define	strchr	index
-#define strrchr	rindex
-#undef	tolower		/* BSD toupper and tolower don't test the character */
-#undef	toupper
-#define	tolower(c)	(islower(c) ? (c) : (c) - 'A' + 'a')	
-#define	toupper(c)	(isupper(c) ? (c) : (c) - 'a' + 'A')	
-#endif
+#include <stdio.h>		/* need FILE* type def. */
 
 /* private library */
 char	*mybasename(char *path);
