@@ -38,5 +38,10 @@
  *	forces rebuilding of the cross-reference.
  */
 
+#ifndef CSCOPE_VERSION_H
+#define CSCOPE_VERSION_H
+
 #define	FILEVERSION	16	/* Initial Open Source and Linux Port */
 #define	FIXVERSION	".0a"	/* feature and bug fix version */
+
+#endif /* CSCOPE_VERSION_H */
